kubernetes/applications/code-server/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: code-server
  namespace: code-server
  labels:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/part-of: everlab

spec:
  type: ClusterIP

  selector:
    app: code-server

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
