kubernetes/applications/code-server/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: code-server
  namespace: code-server
  labels:
    app.kubernetes.io/name: code-server
    app.kubernetes.io/part-of: everlab

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - code.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: code-server
          port: 80
          weight: 1
